--- a/docs/write_up/Figures.tex
+++ b/docs/write_up/Figures.tex
@@ -22,10 +22,10 @@
 	\includegraphics[width=\linewidth]{"Fig1_Combined"}
 	\label{fig:1}
 	\caption{Factor coefficients for the first three factors for (a) the
-		average encounter probability and (b) the average density for
-		the species-groups (outer figures) and spatially (inner
-		figures).  Red: positive association to the factor, Blue:
-		negative association}
+		average encounter probability and (b) the average positive
+		density for the species-groups (outer figures) and spatially
+		(inner figures).  Red: positive association to the factor,
+		Blue: negative association}
 \end{center}
 \end{figure}
 
@@ -38,7 +38,7 @@
 	\label{fig:2}
 	\caption{Position of each species-group on the first two axes from the
 		factor analysis for (a) spatio-temporal encounter probability
-		and (b) spatio-temporal density}
+		and (b) spatio-temporal positive density}
 \end{center}
 \end{figure}
 
@@ -47,11 +47,11 @@
 	\includegraphics[width = \linewidth]{"Figure 1 - Omega1Omega2_Correlations_blank"}
 	\label{fig:3}
 	\caption{Inter-species correlations for (a) spatial encounter
-		probability over all years and (b) spatial density.
+		probability over all years and (b) spatial positive density.
 		Species-groups are clustered into three groups based on a
 		hierarchical clustering method with non-significant
-		correlations (those where the Confidence Interval spanned zero)
-		left blank}
+		correlations (the Confidence Interval [+- 1.96 * SEs] spanned
+		zero) left blank}
 	\end{center}
 \end{figure}
 
@@ -59,9 +59,9 @@
 \begin{center}
 	\includegraphics[width = \linewidth]{"Figure 4 - DensityDifferencesFigureswithCC"}
 	\label{fig:4}
-	\caption{Differences in spatial density for pairs of species and
-		expected catch rates for two different gears at three different
-	locations in 2015}
+	\caption{Differences in the standardised spatial density for pairs of
+		species and expected catch rates for two different gears at
+		three different locations in 2015}
 \end{center}
 \end{figure}
 
